--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 </section>
 
 <section id="more" class="morestyling">
-  <div class="container-fluid text-center">
+  <div class="container-fluid text-center pt-5">
     <div>
       <h1 class="text-uppercase pt-5 pb-5">
         Wikipedia Information</h1>
